# Animesh

./: .gitattributes  .gitignore  .gitmodules  README.md  animesh.sublime-project  animesh.sublime-workspace
src/libArcBall/: CMakeLists.txt
src/libArcBall/include/ArcBall/: AbstractArcBall.h  ArcBall.h  TrackBall.h
src/libArcBall/src/: ArcBall.cpp  TrackBall.cpp
src/libCommonUtilities/: CMakeLists.txt
src/libCommonUtilities/include/CommonUtilities/: split.h
src/libCommonUtilities/src/: split.cpp
src/libGraph/: CMakeLists.txt
src/libGraph/docs/: design.txt
src/libGraph/include/Graph/: CycleExtractor.h  Graph.h  GraphEdgeSimplifier.h  GraphNodeSimplifier.h  GraphSimplifier.h  Path.h
src/libGraph/src/: Path.cpp
src/libGraph/tests/: DGEdgeTests.cpp  DGEdgeTests.h  DGNodeTests.cpp  DGNodeTests.h  TestCycleExtractor.cpp  TestCycleExtractor.h  TestGraph.cpp  TestGraph.h  TestGraphCycles.cpp  TestGraphCycles.h  TestGraphNodeSimplifier.cpp  TestGraphNodeSimplifier.h  TestGraphSimplifier.cpp  TestGraphSimplifier.h  TestUtilities.cpp  TestUtilities.h  UDGEdgeTests.cpp  UDGEdgeTests.h  UDGNodeTests.cpp  UDGNodeTests.h
src/libMultiResolutionOptimiser/: CMakeLists.txt
src/libMultiResolutionOptimiser/include/MultiResolutionOptimiser/: MultiResolutionOptimiser.h
src/libMultiResolutionOptimiser/src/: MultiResolutionOptimiser.cpp
src/libOptimise/: CMakeLists.txt
src/libOptimise/include/Optimise/: AbstractOptimiser.h  EdgeOptimiser.h  NodeOptimiser.h  Optimiser.h  OptimiserInterface.h  SurfelSelectionAlgorithm.h
src/libOptimise/src/: AbstractOptimiser.cpp  EdgeOptimiser.cpp  NodeOptimiser.cpp  Optimiser.cpp  OptimiserInterface.cpp  SurfelSelectionAlgorithm.cpp
src/libPoSy/: CMakeLists.txt
src/libPoSy/include/PoSy/: AbstractOptimiser.h  MultiResolutionPoSyOptimiser.h  PoSy.h  PoSyOptimiser.h  PosyEdgeOptimiser.h
src/libPoSy/src/: AbstractOptimiser.cpp  MultiResolutionPoSyOptimiser.cpp  PoSy.cpp  PoSyOptimiser.cpp  PosyEdgeOptimiser.cpp
src/libPoSy/tests/: TestPoSy.cpp  TestPoSy.h  TestPoSyLatticeNeighbours.cpp  TestPoSyLatticeNeighbours.h  TestPoSyOptimiser.cpp  TestPoSyOptimiser.h  TestPoSyQij.cpp  TestPoSyQij.h  main.cpp
src/libQuad/: CMakeLists.txt
src/libQuad/include/Quad/: Quad.h
src/libQuad/src/: Quad.cpp
src/libVote/: CMakeLists.txt
src/libVote/include/Vote/: VoteCounter.h
src/libVote/tests/: TestVoteCounter.cpp  TestVoteCounter.h
src/posy_visualiser/: CMakeLists.txt  main.cpp  posy_gl_widget.cpp  posy_gl_widget.h  posy_surfel_graph_geometry_extractor.cpp  posy_surfel_graph_geometry_extractor.h  posy_visualiser_window.cpp  posy_visualiser_window.h  posy_visualiser_window.ui
src/rosy_visualiser/: CMakeLists.txt  arc_ball.cpp  arc_ball.h  main.cpp  rosy_gl_widget.cpp  rosy_gl_widget.h  rosy_surfel_graph_geometry_extractor.cpp  rosy_surfel_graph_geometry_extractor.h  rosy_visualiser_status_bar.cpp  rosy_visualiser_status_bar.h  rosy_visualiser_status_bar.ui  rosy_visualiser_window.cpp  rosy_visualiser_window.h  rosy_visualiser_window.ui  surfel_graph_geometry_extractor.cpp  surfel_graph_geometry_extractor.h
src/tools/: .gitignore  CMakeLists.txt  dm_to_point_cloud.cpp  dmr.cpp  fbo.cpp  gen_planar_surfels.cpp  gen_surfel_graph.cpp  gen_unsmoothed_rosy_graph.cpp  glutils.cpp  glutils.hpp  make_corr_sets.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obj_converter.cpp  obj_to_graph.cpp  obj_to_graph.h  posy_validator.cpp  posy_validator.h  shader.hpp  stb_image.h  stb_image_write.h  surfel_bin_to_txt.cpp  surfel_scalar.cpp
src/tools/animesh/: CMakeLists.txt
src/tools/animesh/include/: AnimeshApp.h  AnimeshGLWidget.h  AnimeshWindow.h
src/tools/animesh/src/: AnimeshApp.cpp  AnimeshGLWidget.cpp  AnimeshWindow.cpp  AnimeshWindow.ui  main.cpp
src/tools/build-field_visualiser-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/tools/compute_corr_cilantro/: CMakeLists.txt  main.cpp
src/tools/compute_corr_pcl/: CMakeLists.txt  main.cpp
src/tools/compute_corr_teaser/: CMakeLists.txt  main.cpp
src/tools/compute_pcl_correspondence/: CMakeLists.txt  main.cpp
src/tools/data_gen/: CMakeLists.txt  cl.hpp  dat_gen.cpp  mesh_cl.cpp  mesh_cl.hpp  model_cl.cpp  model_cl.hpp  ray_trace.cl  utility.cpp  utility.hpp
src/tools/dm_to_data/: CMakeLists.txt  README.MD  main.cpp
src/tools/dm_to_graph/: CMakeLists.txt  main.cpp
src/tools/dmr/: CMakeLists.txt  dmr.cpp  model.cpp
src/tools/field_visualiser/: CMakeLists.txt  field_gl_widget.cpp  field_gl_widget.h  field_visualiser_window.cpp  field_visualiser_window.h  field_visualiser_window.ui  geometry_extractor.cpp  geometry_extractor.h  gl_tools.cpp  gl_tools.h  main.cpp  posy_gl_widget.cpp  posy_surfel_graph_geometry_extractor.cpp  posy_surfel_graph_geometry_extractor.h  quad_geometry_extractor.cpp  quad_geometry_extractor.h  quad_gl_widget.cpp  quad_gl_widget.h  rosy_gl_widget.cpp  rosy_gl_widget.h  rosy_surfel_graph_geometry_extractor.cpp  rosy_surfel_graph_geometry_extractor.h
src/tools/field_visualiser/posy/: posy_gl_widget.cpp  (+3 more)
src/tools/glm/: CMakeLists.txt  manual.md  readme.md
src/tools/leggings_tool/: CMakeLists.txt  README.MD  main.cpp
src/tools/libTool/: CMakeLists.txt
src/tools/multi-res-tool/: CMakeLists.txt  README.MD  main.cpp
src/tools/obj_to_graph/: CMakeLists.txt  obj_to_graph.cpp
src/tools/optimisers/: CMakeLists.txt  FieldOptimiser.cpp  FieldOptimiser.h  multi_res_cli.cpp  opt_cli.cpp  posy_cli.cpp  rosy_cli.cpp
src/tools/paths_to_surfel_graph/: CMakeLists.txt  paths_to_surfels.cpp
src/tools/quad_visualiser/: CMakeLists.txt  main.cpp  quad_gl_widget.cpp  quad_gl_widget.h  quad_visualiser_window.cpp  quad_visualiser_window.h  quad_visualiser_window.ui
src/tools/quadulator/: CMakeLists.txt  main.cpp
src/tools/shaders/: compute.glsl  depth_frag_shader.glsl  red_green.cl  rt_fragment_shader.glsl  rt_vertex_shader.glsl  vertex_shader.glsl
src/tools/snoopy/: CMakeLists.txt  snoopy.cpp  snoopy.h
src/tools/surfel_info/: CMakeLists.txt  surfel_info.cpp  surfel_info.h
(+487 files in other folders)
